better placeholder names for soccer live scores

--- a/markup/_dist/live_score.html
+++ b/markup/_dist/live_score.html
@@ -778,8 +778,8 @@
                           <div class="rank__center"><span>124</span></div>
                         </div>
                         <div class="rank__title">
-                          <p>Best team evah</p>
-                          <p class="italic">Best manager evah</p>
+                          <p>My Best NFL Team</p>
+                          <p class="italic">NLC2 Kasper</p>
                         </div>
                         <div class="rank__thumb">
                           <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
@@ -900,8 +900,8 @@
                           <div class="rank__center"><span>124</span></div>
                         </div>
                         <div class="rank__title">
-                          <p>Best team evah</p>
-                          <p class="italic">Best manager evah</p>
+                          <p>My Best NFL Team</p>
+                          <p class="italic">NLC2 Kasper</p>
                         </div>
                         <div class="rank__thumb">
                           <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
@@ -1022,8 +1022,8 @@
                           <div class="rank__center"><span>124</span></div>
                         </div>
                         <div class="rank__title">
-                          <p>Best team evah</p>
-                          <p class="italic">Best manager evah</p>
+                          <p>My Best NFL Team</p>
+                          <p class="italic">NLC2 Kasper</p>
                         </div>
                         <div class="rank__thumb">
                           <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
@@ -1144,8 +1144,8 @@
                           <div class="rank__center"><span>124</span></div>
                         </div>
                         <div class="rank__title">
-                          <p>Best team evah</p>
-                          <p class="italic">Best manager evah</p>
+                          <p>My Best NFL Team</p>
+                          <p class="italic">NLC2 Kasper</p>
                         </div>
                         <div class="rank__thumb">
                           <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
@@ -1266,8 +1266,8 @@
                           <div class="rank__center"><span>124</span></div>
                         </div>
                         <div class="rank__title">
-                          <p>Best team evah</p>
-                          <p class="italic">Best manager evah</p>
+                          <p>My Best NFL Team</p>
+                          <p class="italic">NLC2 Kasper</p>
                         </div>
                         <div class="rank__thumb">
                           <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
@@ -1388,8 +1388,8 @@
                           <div class="rank__center"><span>124</span></div>
                         </div>
                         <div class="rank__title">
-                          <p>Best team evah</p>
-                          <p class="italic">Best manager evah</p>
+                          <p>My Best NFL Team</p>
+                          <p class="italic">NLC2 Kasper</p>
                         </div>
                         <div class="rank__thumb">
                           <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
@@ -1510,8 +1510,8 @@
                           <div class="rank__center"><span>124</span></div>
                         </div>
                         <div class="rank__title">
-                          <p>Best team evah</p>
-                          <p class="italic">Best manager evah</p>
+                          <p>My Best NFL Team</p>
+                          <p class="italic">NLC2 Kasper</p>
                         </div>
                         <div class="rank__thumb">
                           <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
@@ -1632,8 +1632,8 @@
                           <div class="rank__center"><span>124</span></div>
                         </div>
                         <div class="rank__title">
-                          <p>Best team evah</p>
-                          <p class="italic">Best manager evah</p>
+                          <p>My Best NFL Team</p>
+                          <p class="italic">NLC2 Kasper</p>
                         </div>
                         <div class="rank__thumb">
                           <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
@@ -1754,8 +1754,8 @@
                           <div class="rank__center"><span>124</span></div>
                         </div>
                         <div class="rank__title">
-                          <p>Best team evah</p>
-                          <p class="italic">Best manager evah</p>
+                          <p>My Best NFL Team</p>
+                          <p class="italic">NLC2 Kasper</p>
                         </div>
                         <div class="rank__thumb">
                           <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
@@ -1876,8 +1876,8 @@
                           <div class="rank__center"><span>124</span></div>
                         </div>
                         <div class="rank__title">
-                          <p>Best team evah</p>
-                          <p class="italic">Best manager evah</p>
+                          <p>My Best NFL Team</p>
+                          <p class="italic">NLC2 Kasper</p>
                         </div>
                         <div class="rank__thumb">
                           <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
@@ -1998,8 +1998,8 @@
                           <div class="rank__center"><span>124</span></div>
                         </div>
                         <div class="rank__title">
-                          <p>Best team evah</p>
-                          <p class="italic">Best manager evah</p>
+                          <p>My Best NFL Team</p>
+                          <p class="italic">NLC2 Kasper</p>
                         </div>
                         <div class="rank__thumb">
                           <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
@@ -2120,8 +2120,8 @@
                           <div class="rank__center"><span>124</span></div>
                         </div>
                         <div class="rank__title">
-                          <p>Best team evah</p>
-                          <p class="italic">Best manager evah</p>
+                          <p>My Best NFL Team</p>
+                          <p class="italic">NLC2 Kasper</p>
                         </div>
                         <div class="rank__thumb">
                           <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
