--- a/markup/_dist/live_score_soccer.html
+++ b/markup/_dist/live_score_soccer.html
@@ -239,49 +239,49 @@
                       <table class="table table-striped">
                         <tbody>
                                 <tr>
-                                  <td>Touchsdowns all day long!</td>
+                                  <td>Penalty shoot-outs!</td>
                                   <td>The best NLC2 team</td>
                                   <td class="orange">114/150</td>
                                   <td>350</td>
                                 </tr>
                                 <tr>
-                                  <td>Touchsdowns all day long!</td>
+                                  <td>Penalty shoot-outs!</td>
                                   <td>The best NLC2 team</td>
                                   <td class="orange">114/150</td>
                                   <td>350</td>
                                 </tr>
                                 <tr>
-                                  <td>Touchsdowns all day long!</td>
+                                  <td>Penalty shoot-outs!</td>
                                   <td>The best NLC2 team</td>
                                   <td class="orange">114/150</td>
                                   <td>350</td>
                                 </tr>
                                 <tr>
-                                  <td>Touchsdowns all day long!</td>
+                                  <td>Penalty shoot-outs!</td>
                                   <td>The best NLC2 team</td>
                                   <td class="orange">114/150</td>
                                   <td>350</td>
                                 </tr>
                                 <tr>
-                                  <td>Touchsdowns all day long!</td>
+                                  <td>Penalty shoot-outs!</td>
                                   <td>The best NLC2 team</td>
                                   <td class="orange">114/150</td>
                                   <td>350</td>
                                 </tr>
                                 <tr>
-                                  <td>Touchsdowns all day long!</td>
+                                  <td>Penalty shoot-outs!</td>
                                   <td>The best NLC2 team</td>
                                   <td class="orange">114/150</td>
                                   <td>350</td>
                                 </tr>
                                 <tr>
-                                  <td>Touchsdowns all day long!</td>
+                                  <td>Penalty shoot-outs!</td>
                                   <td>The best NLC2 team</td>
                                   <td class="orange">114/150</td>
                                   <td>350</td>
                                 </tr>
                                 <tr>
-                                  <td>Touchsdowns all day long!</td>
+                                  <td>Penalty shoot-outs!</td>
                                   <td>The best NLC2 team</td>
                                   <td class="orange">114/150</td>
                                   <td>350</td>
@@ -500,7 +500,7 @@
                       <form class="form-signin dropdown-my-teams">
                         <div class="input-group">
                           <select id="country" placeholder="COUNTRY" required="" class="form-control custom-select">
-                            <option selected="" disabled="" hidden="">Main best NFL Team!</option>
+                            <option selected="" disabled="" hidden="">My best soccer team!</option>
                             <option>Other amazing team name1!</option>
                             <option>Other amazing team name2!</option>
                             <option>Other amazing team name3!</option>
@@ -567,77 +567,77 @@
                 <div class="player-main-block soccer">
                   <div data-position="GK" class="nl-player-block nl-GK-position"><img src="assets/img/soccer/GK.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
-                      <p class="not-playing">gronkowski</p>
+                      <p class="not-playing">Ronaldo</p>
                       <p class="data">FP <span class="orange">12.67</span> </p>
                       <p class="data">Score <span class="orange">15</span></p>
                     </div>
                   </div>
                   <div data-position="DL" class="nl-player-block nl-DL-position"><img src="assets/img/soccer/D-L.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
-                      <p class="played">gronkowski</p>
+                      <p class="played">Ronaldo</p>
                       <p class="data">FP <span class="orange">12.67</span> </p>
                       <p class="data">Score <span class="orange">15</span></p>
                     </div>
                   </div>
                   <div data-position="DR" class="nl-player-block nl-DR-position"><img src="assets/img/soccer/D-R.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
-                      <p class="not-playing">gronkowski</p>
+                      <p class="not-playing">Ronaldo</p>
                       <p class="data">FP <span class="orange">12.67</span> </p>
                       <p class="data">Score <span class="orange">15</span></p>
                     </div>
                   </div>
                   <div data-position="FLEXL" class="nl-player-block nl-FLEXL-position"><img src="assets/img/soccer/FLEX-L.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
-                      <p class="played">gronkowski</p>
+                      <p class="played">Ronaldo</p>
                       <p class="data">FP <span class="orange">12.67</span> </p>
                       <p class="data">Score <span class="orange">15</span></p>
                     </div>
                   </div>
                   <div data-position="DM" class="nl-player-block nl-DM-position"><img src="assets/img/soccer/D-M.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
-                      <p>gronkowski</p>
+                      <p>Ronaldo</p>
                       <p class="data">FP <span class="orange">12.67</span> </p>
                       <p class="data">Score <span class="orange">15</span></p>
                     </div>
                   </div>
                   <div data-position="MM" class="nl-player-block nl-MM-position"><img src="assets/img/soccer/M-M.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
-                      <p>gronkowski</p>
+                      <p>Ronaldo</p>
                       <p class="data">FP <span class="orange">12.67</span> </p>
                       <p class="data">Score <span class="orange">15</span></p>
                     </div>
                   </div>
                   <div data-position="MR" class="nl-player-block nl-MR-position"><img src="assets/img/soccer/M-R.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
-                      <p class="played">gronkowski</p>
+                      <p class="played">Ronaldo</p>
                       <p class="data">FP <span class="orange">12.67</span> </p>
                       <p class="data">Score <span class="orange">15</span></p>
                     </div>
                   </div>
                   <div data-position="ML" class="nl-player-block nl-ML-position"><img src="assets/img/soccer/M-L.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
-                      <p>gronkowski</p>
+                      <p>Ronaldo</p>
                       <p class="data">FP <span class="orange">12.67</span> </p>
                       <p class="data">Score <span class="orange">15</span></p>
                     </div>
                   </div>
                   <div data-position="FLEXR" class="nl-player-block nl-FLEXR-position"><img src="assets/img/soccer/FLEX-R.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
-                      <p class="not-playing">gronkowski</p>
+                      <p class="not-playing">Ronaldo</p>
                       <p class="data">FP <span class="orange">12.67</span> </p>
                       <p class="data">Score <span class="orange">15</span></p>
                     </div>
                   </div>
                   <div data-position="AL" class="nl-player-block nl-AL-position"><img src="assets/img/soccer/A-L.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
-                      <p>gronkowski</p>
+                      <p>Ronaldo</p>
                       <p class="data">FP <span class="orange">12.67</span> </p>
                       <p class="data">Score <span class="orange">15</span></p>
                     </div>
                   </div>
                   <div data-position="AR" class="nl-player-block nl-AR-position"><img src="assets/img/soccer/A-R.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
-                      <p class="playing">gronkowski</p>
+                      <p class="playing">Ronaldo</p>
                       <p class="data">FP <span class="orange">12.67</span> </p>
                       <p class="data">Score <span class="orange">15</span></p>
                     </div>
@@ -835,8 +835,8 @@
                           <div class="rank__center"><span>124</span></div>
                         </div>
                         <div class="rank__title">
-                          <p>Best team evah</p>
-                          <p class="italic">Best manager evah</p>
+                          <p>My Best Soccer Team</p>
+                          <p class="italic">NLC2 Kasper </p>
                         </div>
                         <div class="rank__thumb"><img src="assets/img/soccer/A-R.png" alt=""></div>
                       </div>
@@ -969,8 +969,8 @@
                           <div class="rank__center"><span>124</span></div>
                         </div>
                         <div class="rank__title">
-                          <p>Best team evah</p>
-                          <p class="italic">Best manager evah</p>
+                          <p>My Best Soccer Team</p>
+                          <p class="italic">NLC2 Kasper </p>
                         </div>
                         <div class="rank__thumb"><img src="assets/img/soccer/A-R.png" alt=""></div>
                       </div>
@@ -1103,8 +1103,8 @@
                           <div class="rank__center"><span>124</span></div>
                         </div>
                         <div class="rank__title">
-                          <p>Best team evah</p>
-                          <p class="italic">Best manager evah</p>
+                          <p>My Best Soccer Team</p>
+                          <p class="italic">NLC2 Kasper </p>
                         </div>
                         <div class="rank__thumb"><img src="assets/img/soccer/A-R.png" alt=""></div>
                       </div>
@@ -1237,8 +1237,8 @@
                           <div class="rank__center"><span>124</span></div>
                         </div>
                         <div class="rank__title">
-                          <p>Best team evah</p>
-                          <p class="italic">Best manager evah</p>
+                          <p>My Best Soccer Team</p>
+                          <p class="italic">NLC2 Kasper </p>
                         </div>
                         <div class="rank__thumb"><img src="assets/img/soccer/A-R.png" alt=""></div>
                       </div>
@@ -1371,8 +1371,8 @@
                           <div class="rank__center"><span>124</span></div>
                         </div>
                         <div class="rank__title">
-                          <p>Best team evah</p>
-                          <p class="italic">Best manager evah</p>
+                          <p>My Best Soccer Team</p>
+                          <p class="italic">NLC2 Kasper </p>
                         </div>
                         <div class="rank__thumb"><img src="assets/img/soccer/A-R.png" alt=""></div>
                       </div>
@@ -1505,8 +1505,8 @@
                           <div class="rank__center"><span>124</span></div>
                         </div>
                         <div class="rank__title">
-                          <p>Best team evah</p>
-                          <p class="italic">Best manager evah</p>
+                          <p>My Best Soccer Team</p>
+                          <p class="italic">NLC2 Kasper </p>
                         </div>
                         <div class="rank__thumb"><img src="assets/img/soccer/A-R.png" alt=""></div>
                       </div>
@@ -1639,8 +1639,8 @@
                           <div class="rank__center"><span>124</span></div>
                         </div>
                         <div class="rank__title">
-                          <p>Best team evah</p>
-                          <p class="italic">Best manager evah</p>
+                          <p>My Best Soccer Team</p>
+                          <p class="italic">NLC2 Kasper </p>
                         </div>
                         <div class="rank__thumb"><img src="assets/img/soccer/A-R.png" alt=""></div>
                       </div>
@@ -1773,8 +1773,8 @@
                           <div class="rank__center"><span>124</span></div>
                         </div>
                         <div class="rank__title">
-                          <p>Best team evah</p>
-                          <p class="italic">Best manager evah</p>
+                          <p>My Best Soccer Team</p>
+                          <p class="italic">NLC2 Kasper </p>
                         </div>
                         <div class="rank__thumb"><img src="assets/img/soccer/A-R.png" alt=""></div>
                       </div>
@@ -1907,8 +1907,8 @@
                           <div class="rank__center"><span>124</span></div>
                         </div>
                         <div class="rank__title">
-                          <p>Best team evah</p>
-                          <p class="italic">Best manager evah</p>
+                          <p>My Best Soccer Team</p>
+                          <p class="italic">NLC2 Kasper </p>
                         </div>
                         <div class="rank__thumb"><img src="assets/img/soccer/A-R.png" alt=""></div>
                       </div>
@@ -2041,8 +2041,8 @@
                           <div class="rank__center"><span>124</span></div>
                         </div>
                         <div class="rank__title">
-                          <p>Best team evah</p>
-                          <p class="italic">Best manager evah</p>
+                          <p>My Best Soccer Team</p>
+                          <p class="italic">NLC2 Kasper </p>
                         </div>
                         <div class="rank__thumb"><img src="assets/img/soccer/A-R.png" alt=""></div>
                       </div>
@@ -2175,8 +2175,8 @@
                           <div class="rank__center"><span>124</span></div>
                         </div>
                         <div class="rank__title">
-                          <p>Best team evah</p>
-                          <p class="italic">Best manager evah</p>
+                          <p>My Best Soccer Team</p>
+                          <p class="italic">NLC2 Kasper </p>
                         </div>
                         <div class="rank__thumb"><img src="assets/img/soccer/A-R.png" alt=""></div>
                       </div>
@@ -2309,8 +2309,8 @@
                           <div class="rank__center"><span>124</span></div>
                         </div>
                         <div class="rank__title">
-                          <p>Best team evah</p>
-                          <p class="italic">Best manager evah</p>
+                          <p>My Best Soccer Team</p>
+                          <p class="italic">NLC2 Kasper </p>
                         </div>
                         <div class="rank__thumb"><img src="assets/img/soccer/A-R.png" alt=""></div>
                       </div>
