--- a/markup/_dist/login.html
+++ b/markup/_dist/login.html
@@ -21,7 +21,7 @@
               <div class="nl-logotype"><a href="index.html"><img src="assets/img/logotype.png" alt="NO Limit"></a></div>
             </div>
             <div class="col-1 col-lg-6">
-              <div class="nl-title">The worlds first crypto fantasy sportss</div>
+              <div class="nl-title">The worlds first crypto fantasy sports</div>
             </div>
             <div class="col-12 col-lg-4">
               <div class="nl-button-login"><a href="login.html" class="btn btn-primary nl-m-r-15">Login</a><a href="register.html" class="btn">SIGN UP</a></div>
