--- a/markup/_dist/live_score_soccer.html
+++ b/markup/_dist/live_score_soccer.html
@@ -314,7 +314,7 @@
                 <table class="table table-info1">
                   <tbody>
                     <tr>
-                      <td>
+                      <td class="left">
                         <div class="leaders-list">
                           <p class="tit">First Game</p>
                           <p>09/14/2017 08:25 AM</p>
