included team format and update placeholder names to match football

--- a/markup/_dist/create_team.html
+++ b/markup/_dist/create_team.html
@@ -100,12 +100,12 @@
       <section class="nl-section nl-players nl-create-team soccer">
         <div class="container-fluid">
           <div class="row">
-            <div class="col-md-8 offset-md-2 col-lg-12 col-xl-12 offset-lg-0 offset-xl-0">
+            <div class="col-md-10 offset-md-1 col-lg-12 col-xl-12 offset-lg-0 offset-xl-0">
               <h1>CREATE TEAM</h1>
             </div>
           </div>
           <div class="row sports-filtering">
-            <div class="col-md-8 offset-md-2 col-lg-12 col-xl-12 offset-lg-0 offset-xl-0">
+            <div class="col-md-10 offset-md-1 col-lg-12 col-xl-12 offset-lg-0 offset-xl-0">
               <div class="nl-players-filter-title">Filter by league:</div>
               <div class="nl-players-filter">
                 <div class="row align-items-center">
@@ -188,15 +188,26 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-md-8 offset-md-2 col-lg-7 offset-lg-0 offset-xl-0 col-xl-7">
+            <div class="col-md-10 offset-md-1 col-lg-7 offset-lg-0 offset-xl-0 col-xl-7">
               <div class="nl-players-table nl-create-team-table">
                 <div class="nl-players-table-data-field">
                   <div class="nl-data--avatar hidden-sm-down"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"></div>
-                  <div class="nl-data--text nl-m-r-80 hidden-sm-down">
-                    <p class="title">Cristiano Ronaldo</p>
-                    <p>team : Real Madrid</p>
-                    <p>position: A</p>
-                    <p>salary: $89000</p>
+                  <div class="nl-data--text nl-m-r-80">
+                    <p class="team-format team-format-title">Team format:</p>
+                    <p class="orange team-format fw-700">A:</p>
+                    <p class="team-format">2</p>
+                    <p class="orange team-format fw-700">M:</p>
+                    <p class="team-format">3</p>
+                    <p class="orange team-format fw-700">D:</p>
+                    <p class="team-format">3</p>
+                    <p class="orange team-format fw-700">GK:</p>
+                    <p class="team-format">1</p>
+                    <p class="orange team-format fw-700">FLEX:</p>
+                    <p class="team-format">2</p>
+                    <p class="hidden-sm-down title">Christiano Ronaldo</p>
+                    <p class="hidden-sm-down">team : Real madrid</p>
+                    <p class="hidden-sm-down">position: A</p>
+                    <p class="hidden-sm-down">salary: $89000</p>
                   </div>
                   <div class="nl-players-search">
                     <div class="input-group">
