--- a/markup/_dist/create_team_football.html
+++ b/markup/_dist/create_team_football.html
@@ -70,7 +70,7 @@
                     <li class="nav-item"><a href="homepage.html" class="nav-link">HOME</a></li>
                     <li class="nav-item"><a href="my_teams.html" class="nav-link">MY TEAMS</a></li>
                     <li class="nav-item"><a href="contests.html" class="nav-link">CONTESTS</a></li>
-                    <li class="nav-item"><a href="players.html" class="nav-link">PLAYERS</a></li>
+                    <li class="nav-item"><a href="players_football.html" class="nav-link">PLAYERS</a></li>
                     <li class="nav-item"><a href="live_score.html" class="nav-link">LIVE SCORES</a></li>
                     <li class="nav-item dropdown"><a href="#" id="dropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle">MY ACCOUNT</a>
                       <div aria-labelledby="dropdownMenuLink2" class="dropdown-menu"><a href="edit_profile.html" class="dropdown-item">Profile</a><a href="change_password.html" class="dropdown-item">edit Password</a><a href="#" class="dropdown-item">Friends </a><a href="my_balances.html" class="dropdown-item">My Balance</a></div>
@@ -127,7 +127,7 @@
                     <p class="team-format">1</p>
                     <p class="hidden-sm-down title">Rob Gronkowski</p>
                     <p class="hidden-sm-down">team : Patriots</p>
-                    <p class="hidden-sm-down">position: QB</p>
+                    <p class="hidden-sm-down">position: TE</p>
                     <p class="hidden-sm-down">salary: $89000</p>
                   </div>
                   <div class="nl-players-search">
