--- a/markup/_dist/live_score_soccer.html
+++ b/markup/_dist/live_score_soccer.html
@@ -344,7 +344,7 @@
                 <table class="table table-info3">
                   <thead>
                     <tr>
-                      <th></th>
+                      <th>Rank</th>
                       <th>Contestant</th>
                       <th>Score</th>
                     </tr>
