--- a/markup/_dist/live_score_soccer.html
+++ b/markup/_dist/live_score_soccer.html
@@ -74,7 +74,7 @@
                     <li class="nav-item"><a href="players_football.html" class="nav-link">PLAYERS</a></li>
                     <li class="nav-item"><a href="live_score.html" class="nav-link">LIVE SCORES</a></li>
                     <li class="nav-item dropdown"><a href="#" id="dropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle">MY ACCOUNT</a>
-                      <div aria-labelledby="dropdownMenuLink2" class="dropdown-menu"><a href="edit_profile.html" class="dropdown-item">Profile</a><a href="change_password.html" class="dropdown-item">edit Password</a><a href="#" class="dropdown-item">Friends </a><a href="my_balances.html" class="dropdown-item">My Balance</a></div>
+                      <div aria-labelledby="dropdownMenuLink2" class="dropdown-menu"><a href="edit_profile.html" class="dropdown-item">Profile</a><a href="change_password.html" class="dropdown-item">edit Password</a><a href="friends.html" class="dropdown-item">Friends </a><a href="my_balances.html" class="dropdown-item">My Balance</a></div>
                     </li>
                     <li class="nav-item dropdown"><a href="#" id="dropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle"><img alt="" src="assets/img/flag/USA.png"></a>
                       <div aria-labelledby="dropdownMenuLink2" class="dropdown-menu"><a href="#" class="dropdown-item">French</a><a href="#" class="dropdown-item"><img alt="" src="assets/img/flag/Spain.png"></a><a href="#" class="dropdown-item"><img alt="" src="assets/img/flag/Germany.png"></a><a href="#" class="dropdown-item"><img alt="" src="assets/img/flag/USA.png"></a></div>
@@ -108,7 +108,7 @@
           <div class="row top-bar-live-scores">
             <div class="col-12 col-lg-6 offset-lg-0 col-xl-8">
               <h5 class="d-inline-block component-header">Matches</h5>
-              <div class="matches rounded-corners">
+              <div class="matches rounded-corners nl-table-horizontal-scroll">
                 <div class="matches__scrollarea">
                         <div class="matches__result">
                           <div class="matches__content">
