scrollbar fix on livescore page, players page tabs better responsive

--- a/markup/_dist/players_football.html
+++ b/markup/_dist/players_football.html
@@ -127,7 +127,8 @@
                   </div>
                 </div>
                 <ul role="tablist" class="nav nav-tabs">
-                  <li class="nav-item"><a data-toggle="tab" href="#all" role="tab" class="nav-link active">All players</a></li>
+                  <li class="nav-item hidden-xs-down"><a data-toggle="tab" href="#all" role="tab" class="nav-link active">All players</a></li>
+                  <li class="nav-item hidden-sm-up"><a data-toggle="tab" href="#all" role="tab" class="nav-link active">All</a></li>
                   <li class="nav-item"><a data-toggle="tab" href="#qb" role="tab" class="nav-link">QB</a></li>
                   <li class="nav-item"><a data-toggle="tab" href="#rb" role="tab" class="nav-link">RB</a></li>
                   <li class="nav-item"><a data-toggle="tab" href="#wr" role="tab" class="nav-link">WR</a></li>
