--- a/markup/_dist/change_password.html
+++ b/markup/_dist/change_password.html
@@ -107,7 +107,7 @@
                 <div role="document" class="block-dialog">
                   <div class="block-content">
                     <div class="block-header">
-                      <h2 id="changePasswordSectionLabel" class="modal-title">Change Password</h2>
+                      <h2 id="changePasswordSectionLabel" class="modal-title">Edit Password</h2>
                     </div>
                     <div class="block-body">
                       <form class="form-signin">
